// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressSpinner animationDuration 1`] = `
<div>
  <div
    aria-busy="true"
    class="p-progress-spinner"
    data-pc-name="progressspinner"
    data-pc-section="root"
    role="progressbar"
  >
    <svg
      class="p-progress-spinner-svg"
      data-pc-section="spinner"
      style="animation-duration: 5s;"
      viewBox="25 25 50 50"
    >
      <circle
        class="p-progress-spinner-circle"
        cx="50"
        cy="50"
        data-pc-section="circle"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`ProgressSpinner default 1`] = `
<div>
  <div
    aria-busy="true"
    class="p-progress-spinner"
    data-pc-name="progressspinner"
    data-pc-section="root"
    role="progressbar"
  >
    <svg
      class="p-progress-spinner-svg"
      data-pc-section="spinner"
      style="animation-duration: 2s;"
      viewBox="25 25 50 50"
    >
      <circle
        class="p-progress-spinner-circle"
        cx="50"
        cy="50"
        data-pc-section="circle"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`ProgressSpinner fill 1`] = `
<div>
  <div
    aria-busy="true"
    class="p-progress-spinner"
    data-pc-name="progressspinner"
    data-pc-section="root"
    role="progressbar"
  >
    <svg
      class="p-progress-spinner-svg"
      data-pc-section="spinner"
      style="animation-duration: 2s;"
      viewBox="25 25 50 50"
    >
      <circle
        class="p-progress-spinner-circle"
        cx="50"
        cy="50"
        data-pc-section="circle"
        fill="green"
        r="20"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`ProgressSpinner strokeWidth 1`] = `
<div>
  <div
    aria-busy="true"
    class="p-progress-spinner"
    data-pc-name="progressspinner"
    data-pc-section="root"
    role="progressbar"
  >
    <svg
      class="p-progress-spinner-svg"
      data-pc-section="spinner"
      style="animation-duration: 2s;"
      viewBox="25 25 50 50"
    >
      <circle
        class="p-progress-spinner-circle"
        cx="50"
        cy="50"
        data-pc-section="circle"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="3"
      />
    </svg>
  </div>
</div>
`;
